# grok-build-cursor-cli

./: Cargo.toml  README.md
crates/codegen/xai-grok-cursor-shell/: Cargo.toml
crates/codegen/xai-grok-cursor-shell/src/: activity.rs  agent_bridge.rs  agent_driver.rs  app.rs  auth.rs  chat.rs  composer.rs  diff_review.rs  history.rs  layout.rs  layout_home.rs  lib.rs  main.rs  projects.rs  render.rs  server.rs  session.rs  slash.rs  workspace.rs
crates/codegen/xai-grok-cursor-shell/tests/: cursor_shell_e2e.rs  http_agent_e2e.rs  real_grok_path.rs
crates/codegen/xai-grok-cursor-shell/tests/fixtures/: fake-grok-agent.sh
crates/codegen/xai-grok-cursor-shell/ui/: app.js  index.html  styles.css
docs/superpowers/plans/: 2026-07-17-cursor-agents-home-ui.md
